# nsntrace

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  install_deps.sh
man/: Makefile.am  man.xsl  nsntrace.xml
snap/: snapcraft.yaml
src/: Makefile.am  capture.c  capture.h  cmd.c  cmd.h  net.c  net.h  nsntrace.c  out.pcap
tests/: Makefile.am  check_cleanup.sh  check_multiple.sh  check_namespaced.sh  check_return_code.sh  test_program_dummy.sh  test_program_dummy_ends.sh  udp_send.c
